syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";
import "Protos/common.proto";

package Akka.Pathfinder;
option csharp_namespace = "Akka.Pathfinder.Grpc";

service Generator {
    rpc CreateMap(MapSettings) returns (Ack);
}

message MapSettings {
    uint32 point_cost = 1;
    uint32 default_direction_cost = 2;
    MapSize map_size = 3;
}

message MapSize{
    int32 width = 1;
    int32 height = 2;
    int32 Depth = 3;
}
